fixing the layout issue

--- a/src/app/layout/components/layout/layout.component.scss
+++ b/src/app/layout/components/layout/layout.component.scss
@@ -5,10 +5,10 @@
     z-index: 99;
     overflow-y: auto;
     user-select: none;
-    top: 5rem;
+    top: 8rem;
     left: 0;
     transition: transform .2s, left .2s;
-    background-color: var(--surface-hover);
+    // background-color: var(--surface-hover);
     // border-radius: 12px;
     padding: 0.5rem 1.5rem;
     // box-shadow: 0px 3px 5px var(--primary-color), 0px 0px 2px var(--primary-color), 0px 1px 4px var(--primary-color);
@@ -64,7 +64,7 @@
 
         &.layout-static {
             .layout-main-container {
-                margin-left: 300px;
+                margin-left: 200px;
             }
 
             &.layout-static-inactive {
