--- a/src/app/movies/movie-details/movie-details.component.scss
+++ b/src/app/movies/movie-details/movie-details.component.scss
@@ -1,7 +1,3 @@
-.background-container {
-    width: 100%; 
-    height: 300px; 
-    background-size: cover;
-    background-position: center center;
-    color: black;
-  }
+.banner-img {
+    object-fit:fill;
+}
